[gd_scene format=3 uid="uid://dkhk5elsugbu3"]

[ext_resource type="Script" uid="uid://uwhhvm5ghhav" path="res://scripts/game/game_manager.gd" id="1_f15x8"]
[ext_resource type="Texture2D" uid="uid://drkukqbmigyjj" path="res://assets/sprites/sproutLands/Sprite sheet for Basic Pack.png" id="2_x4yst"]
[ext_resource type="Texture2D" uid="uid://33wevs8qdogj" path="res://assets/sprites/cenario/ambiente_v2.png" id="3_8hgvj"]
[ext_resource type="Texture2D" uid="uid://ch0kn7d2nhhu2" path="res://assets/sprites/Mimos_Jogo.png" id="3_hakyw"]
[ext_resource type="Script" uid="uid://bag8f2d843hq5" path="res://scripts/game/drop_area.gd" id="4_sgrlf"]
[ext_resource type="Texture2D" uid="uid://b8w4u0g7g070v" path="res://assets/sprites/cenario/Sprite_-_Ambiente_new.png" id="4_xeetc"]
[ext_resource type="Texture2D" uid="uid://c5ol46r1px302" path="res://assets/sprites/freeversion.png" id="5_8hgvj"]
[ext_resource type="Texture2D" uid="uid://det7jci58frkl" path="res://assets/sprites/cenario/Sprite_-_Ambiente_Tecido1.png" id="5_dpgjp"]
[ext_resource type="Texture2D" uid="uid://ulxnkmyy8moo" path="res://assets/sprites/UiCozyFree.png" id="6_xeetc"]
[ext_resource type="Texture2D" uid="uid://pe06ee1hg42t" path="res://assets/sprites/interativos/Sprite_-_Envelope.png" id="7_dpgjp"]
[ext_resource type="Script" uid="uid://dfgor2ntbul2f" path="res://scripts/game/selo_drop_area.gd" id="8_hfwoa"]
[ext_resource type="PackedScene" uid="uid://b3v6xcdhhgpob" path="res://nodes/forninho.tscn" id="9_bnkwb"]
[ext_resource type="PackedScene" uid="uid://k60py55behho" path="res://nodes/carimbo.tscn" id="10_oghtg"]
[ext_resource type="Texture2D" uid="uid://c1x7ukxo1do67" path="res://icon.svg" id="11_fxhtu"]
[ext_resource type="PackedScene" uid="uid://bsurfhovo4wbh" path="res://nodes/sinetes/sinete_manteiga_voadora.tscn" id="12_obq85"]
[ext_resource type="Texture2D" uid="uid://dd4tmlyatjlbc" path="res://assets/sprites/interativos/sinete/sinete_animation.png" id="13_gu7p2"]
[ext_resource type="PackedScene" uid="uid://c8dkirao6w4yh" path="res://nodes/tinta.tscn" id="14_38v0w"]
[ext_resource type="Resource" uid="uid://d3smy8fmlbe82" path="res://resources/tintas/tinta_vermelha.tres" id="15_chh6u"]
[ext_resource type="Texture2D" path="res://assets/sprites/cenario/Sprite_-_Ambiente.png" id="16_x4yst"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hfwoa"]
atlas = ExtResource("13_gu7p2")
region = Rect2(9, 4, 148, 152)

[sub_resource type="AtlasTexture" id="AtlasTexture_0amvw"]
atlas = ExtResource("2_x4yst")
region = Rect2(259, 180, 90, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi4rr"]
atlas = ExtResource("3_hakyw")
region = Rect2(832, 412, 128, 228)

[sub_resource type="AtlasTexture" id="AtlasTexture_qes35"]
atlas = ExtResource("3_hakyw")
region = Rect2(1148, 500, 124, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0nmg"]
atlas = ExtResource("3_hakyw")
region = Rect2(1360, 536, 204, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8jj3"]
atlas = ExtResource("3_hakyw")
region = Rect2(1736, 432, 228, 208)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8g0a"]
atlas = ExtResource("5_8hgvj")
region = Rect2(5, 128, 118, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgfeb"]
atlas = ExtResource("6_xeetc")
region = Rect2(1, 4, 91, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_ex200"]
atlas = ExtResource("5_8hgvj")
region = Rect2(241, 114, 14, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_64ygu"]
atlas = ExtResource("13_gu7p2")
region = Rect2(162, 0, 162, 163)

[node name="GameCore" type="Control" unique_id=900097777]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_vertical_guides_ = [294.0, 846.0, -101.0]
metadata/_edit_horizontal_guides_ = [209.0, 464.0]
metadata/_edit_use_anchors_ = true

[node name="GameManager" type="Node" parent="." unique_id=1408177371]
script = ExtResource("1_f15x8")
current_game_step = 3

[node name="--------------------" type="Node" parent="." unique_id=1731279526]

[node name="TextureRect" type="TextureRect" parent="." unique_id=1438376143]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("16_x4yst")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="." unique_id=1111132593]
layout_mode = 0
offset_left = -29.0
offset_top = 98.0
offset_right = 847.0
offset_bottom = 487.0
texture = ExtResource("3_8hgvj")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="." unique_id=1374967767]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.998
anchor_bottom = 0.5
offset_left = 1.0
offset_right = 3.2799683
offset_bottom = -4.0
texture = ExtResource("4_xeetc")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="." unique_id=1303931839]
layout_mode = 0
offset_left = 123.0
offset_top = 251.0
offset_right = 512.0
offset_bottom = 444.0
texture = ExtResource("5_dpgjp")
expand_mode = 1

[node name="TextureRect5" type="TextureRect" parent="." unique_id=189519098]
layout_mode = 0
offset_left = 457.0
offset_top = 321.0
offset_right = 497.0
offset_bottom = 361.0
texture = SubResource("AtlasTexture_hfwoa")
expand_mode = 1
stretch_mode = 4

[node name="Mimos" type="Control" parent="." unique_id=1559606305]
layout_mode = 1
anchor_left = 1.0
anchor_top = 0.119
anchor_right = 1.0
anchor_bottom = 0.119
offset_left = -214.5658
offset_top = -62.68
offset_right = -6.0
offset_bottom = 36.879997
grow_horizontal = 0
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="Mimos" unique_id=1663892490]
visible = false
modulate = Color(0.68307734, 0.6830774, 0.68307734, 1)
position = Vector2(129.99992, 114.347)
scale = Vector2(3.9111104, 1.5)
texture = SubResource("AtlasTexture_0amvw")

[node name="Mimo1" type="TextureRect" parent="Mimos" unique_id=1860050874]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.7171
offset_top = -7.220001
offset_right = -80.5
offset_bottom = 32.737015
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_xi4rr")
expand_mode = 1
stretch_mode = 4

[node name="Mimo2" type="TextureRect" parent="Mimos" unique_id=1247415900]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.7171
offset_top = -8.220001
offset_right = -31.5
offset_bottom = 39.989403
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_qes35")
expand_mode = 1
stretch_mode = 4

[node name="Mimo3" type="TextureRect" parent="Mimos" unique_id=1447528357]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.717102
offset_top = 6.779999
offset_right = 38.862396
offset_bottom = 39.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_t0nmg")
expand_mode = 1
stretch_mode = 4

[node name="Mimo4" type="TextureRect" parent="Mimos" unique_id=1527391876]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 45.282898
offset_top = 3.7799988
offset_right = 84.485306
offset_bottom = 42.059998
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_s8jj3")
expand_mode = 1
stretch_mode = 4

[node name="Mesa" type="Control" parent="." unique_id=1247997050]
layout_mode = 1
anchor_top = 0.63900006
anchor_right = 1.0070001
anchor_bottom = 1.2210001
offset_left = 1.0
offset_top = -35.08008
offset_right = 1.039917
offset_bottom = 71.87988
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("4_sgrlf")

[node name="TextureRect" type="TextureRect" parent="Mesa" unique_id=1850948923]
visible = false
self_modulate = Color(0.728822, 0.728822, 0.728822, 0.7254902)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -31.0
offset_right = 31.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_j8g0a")
stretch_mode = 4

[node name="Carta" type="Control" parent="." unique_id=712507268]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -369.0
offset_right = 159.0
offset_bottom = -189.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("4_sgrlf")
carimboOffset = Vector2(-50, -80)

[node name="TextureRect" type="TextureRect" parent="Carta" unique_id=1877624554]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -126.0
offset_right = 184.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_rgfeb")

[node name="CartaEnvelopada" type="Control" parent="." unique_id=535269832]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -187.0
offset_top = -386.0
offset_right = 175.0
offset_bottom = -184.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("4_sgrlf")
carimboOffset = Vector2(-50, -80)

[node name="envelope" type="TextureRect" parent="CartaEnvelopada" unique_id=1969456191]
self_modulate = Color(0.94146866, 0.9000385, 0.76186484, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -302.0
offset_top = -286.0
offset_right = 302.0
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("7_dpgjp")
expand_mode = 1

[node name="SeloArea" type="TextureRect" parent="CartaEnvelopada/envelope" unique_id=1879112048]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -76.0
offset_right = 25.125
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
mouse_behavior_recursive = 2
script = ExtResource("8_hfwoa")

[node name="Desenho" type="TextureRect" parent="CartaEnvelopada/envelope/SeloArea" unique_id=306746821]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.5
offset_top = -21.5
offset_right = 22.4375
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 4

[node name="Panel" type="Panel" parent="CartaEnvelopada/envelope/SeloArea" unique_id=2106306376]
modulate = Color(1, 0.13674557, 0.26036727, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -26.0
offset_right = 25.5
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Forninho" parent="." unique_id=1324390624 instance=ExtResource("9_bnkwb")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.012
anchor_top = 0.96800005
anchor_right = 0.012
anchor_bottom = 0.96800005
offset_left = 107.64
offset_top = -159.96002
offset_right = 232.64
offset_bottom = -32.960022
grow_vertical = 0

[node name="---------------------" type="Node" parent="." unique_id=1146592228]

[node name="Carimbo" parent="." unique_id=911283932 instance=ExtResource("10_oghtg")]
layout_mode = 1
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 208.0
offset_top = -119.0
offset_right = 262.5
offset_bottom = -64.5
grow_vertical = 0
texture = ExtResource("11_fxhtu")

[node name="Desenho" parent="Carimbo" index="0" unique_id=134822399]
offset_left = -17.73529
offset_top = -16.75
offset_right = 17.73529
offset_bottom = 16.75
texture = SubResource("AtlasTexture_ex200")

[node name="SineteButterfly" parent="." unique_id=1802318788 instance=ExtResource("12_obq85")]
self_modulate = Color(1, 1, 1, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.86200005
anchor_top = 0.786
anchor_right = 0.86200005
anchor_bottom = 0.786
offset_left = -93.36011
offset_top = -93.91998
offset_right = -53.680054
offset_bottom = -54.28
grow_horizontal = 1
grow_vertical = 1
texture = SubResource("AtlasTexture_64ygu")
preview_size = Vector2(20, 20)

[node name="TintaVermelha" parent="." unique_id=1655781924 instance=ExtResource("14_38v0w")]
modulate = Color(0.88235295, 0.003921569, 0, 1)
self_modulate = Color(0.88235295, 0.003921569, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.379
anchor_top = 1.0
anchor_right = 0.379
anchor_bottom = 1.0
offset_left = -120.229004
offset_top = -107.0
offset_right = -63.850006
offset_bottom = -50.62097
grow_vertical = 0
tinta = ExtResource("15_chh6u")
preview_size = Vector2(62, 62)

[connection signal="change_to_ended_step" from="CartaEnvelopada/envelope/SeloArea" to="GameManager" method="_on_selo_area_change_to_ended_step"]
[connection signal="change_to_postmark_step" from="CartaEnvelopada/envelope/SeloArea" to="GameManager" method="_on_selo_area_change_to_postmark_step"]
[connection signal="change_to_drop_step" from="Forninho" to="GameManager" method="_on_forninho_change_to_drop_step"]

[editable path="Carimbo"]
